--- a/tools/pom.xml
+++ b/tools/pom.xml
@@ -1,10 +1,11 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.automic.actions</groupId>
-  <artifactId>puppet-tool</artifactId>
-  <version>${version}</version>
-  <name>puppet-tool</name>
-  <description>Puppet tool provides functionalities to integrate with Puppet Rest API.</description>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.automic.actions</groupId>
+	<artifactId>puppet-tool</artifactId>
+	<version>${version}</version>
+	<name>puppet-tool</name>
+	<description>Puppet tool provides functionalities to integrate with Puppet Rest API.</description>
 
 	<properties>
 		<version>1.0.0-SNAPSHOT</version>
@@ -28,13 +29,13 @@
 			<artifactId>jersey-multipart</artifactId>
 			<version>1.13</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
 			<version>4.5</version>
 		</dependency>
-		
+
 		<!-- Apache CLI -->
 		<dependency>
 			<groupId>commons-cli</groupId>
@@ -47,9 +48,14 @@
 			<artifactId>commons-io</artifactId>
 			<version>2.4</version>
 		</dependency>
-	
+
+		<dependency>
+			<groupId>org.glassfish</groupId>
+			<artifactId>javax.json</artifactId>
+			<version>1.0.4</version>
+		</dependency>
 	</dependencies>
-	
+
 	<build>
 		<plugins>
 			<plugin>
