--- a/tools/pom.xml
+++ b/tools/pom.xml
@@ -47,6 +47,12 @@
 			<artifactId>commons-io</artifactId>
 			<version>2.4</version>
 		</dependency>
+		
+		<dependency>
+             <groupId>org.glassfish</groupId>
+             <artifactId>javax.json</artifactId>
+             <version>1.0.4</version>
+		</dependency>
 	
 	</dependencies>
 	
